# cache

./: .gitignore  CMakeLists.txt  Cache.sln  Cache.vcxproj  Cache.vcxproj.filters  README.md  TODO  build.py  build.sh  cache.sln  cache.vcxproj  cache.vcxproj.filters  pack_debug_traces.sh  setup.sh
.github/workflows/: cmake.yml
inc/: Cache.h  GlobalIncludes.h  IOUtilities.h  Instruction.h  Memory.h  Multithreading.h  RequestManager.h  SimTracer.h  Simulator.h  cache.h  cache_params.h  debug.h  default_test_params.h  inlines.h  io_utils.h  list.h  sim_trace.h  sim_trace_decoder.h  test_params.h
sim_trace_decoder/: CMakeLists.txt  Makefile  pack_debug_traces.sh  sim_trace_decoder.c  sim_trace_decoder.cpp
src/: Cache.cpp  IOUtilities.cpp  Makefile_debug  Makefile_release  Memory.cpp  Multithreading.cpp  SimTracer.cpp  Simulator.cpp  cache.c  cache.cpp  io_utils.c  io_utils.cpp  list.c  list.cpp  main.c  main.cpp  sim_trace.c  test_params.cpp
src/Cache/: Cache.cpp  Memory.cpp  RequestManager.cpp
trace_generation/: CMakeLists.txt
trace_generation/fake_trace_generator/: CMakeLists.txt  Makefile  trace.c
trace_generation/matrix_multiplication/: CMakeLists.txt  Makefile  matrix.c
trace_generation/qsort/: CMakeLists.txt  Makefile  sort.c
